# odoo19-custom

coffee_lot_inheritance/: __manifest__.py
coffee_lot_inheritance/models/: __init__.py  mrp_production.py  stock_lot.py
coffee_maturity/: __manifest__.py
coffee_maturity/data/: category_data.xml
coffee_maturity/models/: __init__.py  stock_production_lot.py
coffee_maturity/views/: stock_production_lot_views.xml
lot_custom_fields/: __manifest__.py
lot_custom_fields/data/: coffee_origin_data.xml
lot_custom_fields/models/: __init__.py  coffee_origin.py  stock_lot.py
lot_custom_fields/security/: ir.model.access.csv
lot_custom_fields/views/: mrp_label_production_override.xml  report_lot_label_inherit.xml  stock_lot_views.xml
mrp_product_lot_sequence_fix/: __manifest__.py
mrp_product_lot_sequence_fix/models/: stock_move_line.py
mrp_production_responsable/: __manifest__.py
mrp_production_responsable/models/: mrp_production.py
mrp_production_responsable/views/: mrp_production_views.xml
odoo_fut_module/: __manifest__.py
odoo_fut_module/models/: __init__.py  mrp_fut_line.py  mrp_production.py  product_template.py
odoo_fut_module/report/: report_fut_etiquette.xml
odoo_fut_module/security/: ir.model.access.csv
odoo_fut_module/views/: mrp_production_views.xml  (+1 more)
pos_remove_powered_by/: __manifest__.py
product_lot_sequence/: __manifest__.py
quality_controle_responsible/: __manifest__.py
remote_report_to_printer/: __manifest__.py
report-print-send-18.0/: README.md
report-print-send-18.0/setup/_metapackage/: pyproject.toml
(+9 files in other folders)
