[project]
name = "odoo-addons-oca-report-print-send"
version = "18.0.20251016.0"
dependencies = [
    "odoo-addon-base_report_to_label_printer==18.0.*",
    "odoo-addon-base_report_to_printer==18.0.*",
    "odoo-addon-base_report_to_printer_mail==18.0.*",
    "odoo-addon-printer_zpl2==18.0.*",
    "odoo-addon-printing_auto_base==18.0.*",
    "odoo-addon-server_env_printing_server==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
